# sample-apps

./: .gitignore  .travis.yml  AlbumRecommendationDockerfile  CONTRIBUTING.md  Code-of-Conduct.md  Gemfile  README.md  Vagrantfile  VespaAlternateDockerfile  _code_snippets_config.yml  _config.yml  _paragraphs_config.yml  _suggestions_config.yml  aws_bootstrap.sh  code_snippet_index.json  console-sample-apps.json  docker-compose.yml  feed-split.py  feed_to_vespa.py  pom.xml  questions.jsonl  renovate.json  screwdriver.yaml  suggestions_index.json
colbert/: README.md  (+1 more)
colbert-pooling/: .gitignore  README.md  export_model.py  feed.py  pom.xml  pyproject.toml  verify_correctness.py
colbert-pooling/ext/: feed.jsonl
gte-moderncolbert/: .gitignore  README.md  compare_inference.py  evaluating-vespa-application-cloud.ipynb  feed_nanobeir.py  moderncolbert.py  pyproject.toml
gte-moderncolbert/app/: .vespaignore  services.xml
gte-moderncolbert/app/.vespa/: config.yaml
gte-moderncolbert/app/schemas/: doc.sd
gte-moderncolbert/dataset/: 1.json  2.json
rag-blueprint/eval/: collect_pyvespa.py  collect_training_data.py  evaluate_match_phase.py  evaluate_ranking.py  main.py  pyproject.toml  resp.json  train_lightgbm.py  train_logistic_regression.py  training_features_coefficients.txt
rag-blueprint/eval/collected_training_data/: training_features.csv
rag-blueprint/eval/output/: Vespa-training-data_match_first_phase_20250623_133241.csv  Vespa-training-data_match_first_phase_20250623_133241_logreg_coefficients.txt  Vespa-training-data_match_rank_second_phase_20250623_135819.csv  Vespa-training-data_match_rank_second_phase_20250623_135819_feature_importance.csv  Vespa-training-data_matchfeatures-firstphase_20250619_095907.csv  Vespa-training-data_matchfeatures-firstphase_20250619_095907_coefficients.txt  Vespa-training-data_second-phase_20250619_182246.csv  Vespa-training-data_second-phase_20250619_182246_feature_importance.csv
visual-retrieval-colpali/: .env.example  .gitignore  README.md  deploy_vespa_app.py  feed_vespa.py  globals.css  hello.py  icons.py  main.py  minimal.py  output.css  prepare_feed_deploy.ipynb  prepare_feed_deploy.py  pyproject.toml  query_vespa.py  refeed_from_hf.py  requirements.txt  tailwind.config.js  vespa_feed_to_hf_dataset.py  visual-pdf-rag-with-vespa-colpali-demo.py
visual-retrieval-colpali/application/: deployment.xml  services.xml
visual-retrieval-colpali/backend/: colpali.py  modelmanager.py  stopwords.py  testquery.py  vespa_app.py
visual-retrieval-colpali/colpali-with-snippets/: services.xml
visual-retrieval-colpali/colpalidemo/: services.xml
visual-retrieval-colpali/frontend/: app.py  layout.py
visual-retrieval-colpali/src/: README.md  globals.css  icons.py  legacy-requirements.txt  main.py  output.css  requirements.txt  tailwind.config.js
visual-retrieval-colpali/ui/: home.py  layout.py  search.py
(+2044 files in other folders)
