[project]
name = "colbert-pooling"
version = "0.1.0"
description = "ColBERT with hierarchical token pooling for Vespa"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "onnxscript>=0.6.2",
    "requests>=2.28.0",
]

[project.optional-dependencies]
export = [
    "pylate-onnx-export>=0.1.0",
]
scipy = [
    "scipy>=1.10.0",
]
test = [
    "pytest>=7.0.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/colbert_pooling"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
