[project]
name = "colbert-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers>=4.48.0",
    "onnx",
    "onnxscript",
    "onnxruntime",
    "numpy",
    "huggingface_hub",
    "safetensors",
    "scipy",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "pylate>=1.3.4",
    "scikit-learn>=1.8.0",
    "datasets>=4.4.2",
    "pyvespa>=0.62.0",
]
